# Aether-Mesh

./: .gitignore  Aether Mesh - Startup Pitch One-Pager (v2).md  Aether Mesh - Startup Pitch One-Pager (v3).md  README.md  railway.json
aether/: .dockerignore  .env.example  .gitattributes  Dockerfile.stack  README.md  docker-compose.yml  entrypoint.sh  litestream.yml  railway.toml  run-dev.ps1  run-dev.sh
aether/app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
aether/app/desktop/src-tauri/icons/: ICONS_NEEDED.txt  icon.icns
aether/app/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sandbox.rs  vault.rs
aether/cloud/: cloud-setup.md  docker-compose.cloud.yml
aether/core/: Dockerfile  pyproject.toml
aether/core/aether_core/: __init__.py  __main__.py  circuit.py  config.py  deliverable.py  heartbeat.py  self_correction.py  task_detection.py
aether/core/aether_core/bridges/: __init__.py  _http.py  email_channel.py  hermes_bridge.py  infra_bridge.py  openclaw_bridge.py  sms_channel.py
aether/core/aether_core/skills/: __init__.py  compiler.py  downloader.py  exceptions.py  injector.py  registry.json  registry.py
aether/core/tests/: conftest.py  test_contracts.py  test_entitlements.py  test_heartbeat_fixes.py  test_reliability.py  test_skills.py  test_smoke.py
aether/core/tests/_ent_ws_chan/: ledger-ent.json
aether/core/tests/_ent_ws_quota/: ledger-ent.json
aether/infra/: Dockerfile  package.json
aether/platform/: Dockerfile  package.json
aether/scripts/: test-all.ps1  test-all.sh
aether/shared/: crypto.mjs  db.mjs  e2e.mjs  http.mjs  (+7 more)
openclaw/: tsdown.config.ts
(+139 files in other folders)
