[project]
name = "aether-core"
version = "0.1.0"
description = "Aether Mesh Core — the autonomous heartbeat brain-loop that drives Hermes through OpenClaw channels and the leased infrastructure body."
requires-python = ">=3.10"
# The core loop runs on the stdlib alone (urllib) so it works in any demo
# environment. The extras below are optional accelerators.
dependencies = []

[project.optional-dependencies]
fast = ["httpx>=0.27"]
dev = ["pytest>=8"]

[project.scripts]
aether-core = "aether_core.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aether_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
